--- a/AppRoomReservation/templates/ShowAllRooms.html
+++ b/AppRoomReservation/templates/ShowAllRooms.html
@@ -9,14 +9,18 @@ table, th, td {
 th, td {
     padding: 5px;
     text-align: left;
+    align: center;
 }
 </style>
 
 
 <table style="width:50%">
     <tr>
+        <th colspan=4> Today is {{ current_date }} </th>
+    </tr>
+    <tr>
         <th>Room name </th>
-        <th colspan=3> Toolbar </th>
+        <th colspan=3> Room Toolbar </th>
     </tr>
 {% for room in allRooms %}
     <tr>
