Room today status

--- a/AppRoomReservation/templates/ModifyRoom.html
+++ b/AppRoomReservation/templates/ModifyRoom.html
@@ -8,7 +8,7 @@ table, th, td {
 }
 th, td {
     padding: 5px;
-    text-align: left;
+    text-align: center;
 }
 </style>
 
@@ -32,5 +32,9 @@ th, td {
         </tr>
         </table>
     </form>
+
+<br/>
+<a href="{% url 'show_all_rooms' %}"> Show All Rooms </a>
+</html>
 {% endblock %}
 </html>
