--- a/AppRoomReservation/templates/ShowAllRooms.html
+++ b/AppRoomReservation/templates/ShowAllRooms.html
@@ -8,7 +8,7 @@ table, th, td {
 }
 th, td {
     padding: 5px;
-    text-align: left;
+    text-align: center;
     align: center;
 }
 </style>
@@ -16,18 +16,25 @@ th, td {
 
 <table style="width:50%">
     <tr>
-        <th colspan=4> Today is {{ current_date }} </th>
+        <th colspan=5> Today is {{ current_date }} </th>
     </tr>
     <tr>
         <th>Room name </th>
+        <th>Today status</th>
         <th colspan=3> Room Toolbar </th>
     </tr>
+
 {% for room in allRooms %}
     <tr>
         <td> {{room.name}} </td>
+        {% if room.name in today_reservations %}
+        <td> BUSY </td>
+        {% else %}
+        <td> FREE </td>
+        {% endif %}
         <td> <a href="{% url 'modify_room' room.id %}"> Modify </a> </td>
         <td> <a href="{% url 'delete_room' room.id %}"> Delete </a>  </td>
-        <td> <a href="{% url 'show_room_details' room.id %}"> Show Details </a>  </td>
+        <td> <a href="{% url 'show_room_details' room.id %}"> Show Details and <br> Make Reservation </a>  </td>
     </tr>
 {% endfor %}
 </table>
