--- a/AppRoomReservation/templates/ShowAllRooms.html
+++ b/AppRoomReservation/templates/ShowAllRooms.html
@@ -37,10 +37,34 @@ th, td {
         <td> <a href="{% url 'show_room_details' room.id %}"> Show Details and <br> Make Reservation </a>  </td>
     </tr>
 {% endfor %}
+    <tr>
+        <td colspan=5>
+                <a href="{% url 'add_room' %}"> Add New Room </a>
+        </td>
+    </tr>
 </table>
-
 <br/>
-<a href="{% url 'add_room' %}"> Add Room </a>
+
+    <h3>Search for free Room</h3>
+    <form method="GET" action="/search">
+        {% csrf_token %}
+        <table style="width:50%">
+        <tr>
+            <td>Room name</td>
+            <td>Room capacity</td>
+            <td>Projector</td>
+			<td>Reservation date</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td> <input type="text" name="name" placeholder="Name" /> </td>
+            <td> <input type="number" name="capacity" placeholder="Capacity" /> </td>
+            <td> <input type="checkbox" name="projector" placeholder="Projector availability"/> </td>
+			<td> <input type="date" name="reservation_date" placeholder="Date" value={{ current_date }} min={{ current_date }}/> </td>
+            <td> <input type="submit" value="Search"/> </td>
+        </tr>
+        </table>
+    </form>
 
 
 </html>
