--- a/AppRoomReservation/templates/ShowRoomDetails.html
+++ b/AppRoomReservation/templates/ShowRoomDetails.html
@@ -14,13 +14,13 @@ th, td {
 
 
 {% block content %}
-    <h1>Room {{ room.name }} details are following:</h1>
+    <h2>Room {{ room.name }} details are following:</h2>
 
         <table style="width:50%">
         <tr>
-            <td>Room name</td>
-            <td>Room capacity</td>
-            <td>Projector</td>
+            <th>Room name</th>
+            <th>Room capacity</th>
+            <th>Projector</th>
         </tr>
         <tr>
             <td> {{ room.name }} </td>
@@ -29,8 +29,13 @@ th, td {
         </tr>
         </table>
 
-    <h1>Room {{ room.name }} current reservations are following:</h1>
+    <h2>Room {{ room.name }} current reservations are following:</h2>
     <table>
+        <tr>
+            <th>Reservation date</th>
+            <th>Reservation comment</th>
+        </tr>
+
         {% for reservation in reservations %}
         <tr>
             <td>{{ reservation.data }}</td> <td> {{ reservation.comment }} </td>
@@ -38,7 +43,7 @@ th, td {
         {% endfor %}
     </table>
 
-    <h1>Make reservation</h1>
+    <h2>Make reservation</h2>
     <form method="POST" action="{%url 'make_reservation' room.id %}">
           {% csrf_token %}
         <table style="width:50%">
@@ -61,5 +66,5 @@ th, td {
 {% endblock %}
 
 <br/>
-<a href="{% url 'show_all_rooms' %}"> Show All Rooms </a>
+<a href="{% url 'show_all_rooms' %}"> <<<---Show All Rooms </a>
 </html>
